--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,97 +1,31 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-orbs:
-  terraform: circleci/terraform@3.2.1
-  python: circleci/python@1.5.0
-  aws-cli: circleci/aws-cli@4.0
-  aws-s3: circleci/aws-s3@4.0
-  
-
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  job1:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
     docker:
-      - image: hashicorp/terraform:latest
-    working_directory: ~/repo
+      # Specify the version you desire here
+      # See: https://circleci.com/developer/images/image/cimg/base
+      - image: cimg/base:current
+
+    # Add steps to the job
+    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
     steps:
+      # Checkout the code as the first step.
       - checkout
       - run:
-          name: Install jq
-          command: |
-            apk update
-            apk add jq
-            ls
-      - run:
-          name: Print env variables
-          command: |
-            
-            ENV="$(cat env/environments.json | jq -r '.["'$environment'"].env')"
-            REGION="$(cat env/environments.json | jq -r '.["'$environment'"].region')"
-            SHORT_REGION="$(cat env/environments.json | jq -r '.["'$environment'"].short_region')"
-            ENV_2="$(cat env/environments.json | jq -r '.qa1.env')"
-            echo "----------------"
-            echo "$ENV"
-            echo "$REGION"
-            echo "$SHORT_REGION"
-            echo "----------------"
-            echo "export ENV="$(cat env/environments.json | jq -r '.["'$environment'"].env')"" >> "$BASH_ENV"
-            echo "export REGION="$(cat env/environments.json | jq -r '.["'$environment'"].region')"" >> "$BASH_ENV"
-            echo "export SHORT_REGION="$(cat env/environments.json | jq -r '.["'$environment'"].short_region')"" >> "$BASH_ENV"
-            source "$BASH_ENV"
-            
-      - run: |
-          cp $BASH_ENV bash.env
-      - persist_to_workspace:
-          root: .
-          paths:
-            - bash.env
-  job2:
-    docker:
-      - image: python:3.8
-    working_directory: ~/repo
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
-      - run: |
-          cat bash.env >> $BASH_ENV
-      - run: |
-          # verify; this should print 'BAR'
-          printenv ENV
-      - run:
-          name: Step 1
-          command: |
-            source "$BASH_ENV"
-            echo "----------------"
-            echo "$ENV"
-            echo "$REGION"
-            echo "$SHORT_REGION"
-            echo "----------------"
-  
-  job3:
-    docker:
-      - image: cimg/aws:2023.12
+          name: "Say hello"
+          command: "echo Hello, World!"
 
-    working_directory: ~/repo
-    steps:
-      - checkout
-
-      - aws-cli/setup:
-          aws_access_key_id: AKIAV6BPTWTLQQDLRJBV
-          aws_secret_access_key: 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
-          region: ap-south-1
-
-      - aws-s3/sync:
-          from: "./"  
-          to: "s3://circle-test-bucket-1/"
-          arguments: "--delete"
+# Orchestrate jobs using workflows
+# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  version: 2
-  # Infra-Setup-1:
-  #   jobs:
-  #     - job1
-  #     - job2:
-  #         requires:
-  #           - job1
-  S3-sync-test:
+  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - job3
+      - say-hello
