--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,8 @@ jobs:
       - checkout
 
       - aws-cli/setup:
-          aws_access_key_id: AKIAV6BPTWTLQQDLRJBV
-          aws_secret_access_key: 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
+          aws_access_key_id: "AKIAV6BPTWTLQQDLRJBV"
+          aws_secret_access_key: "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"
           region: ap-south-1
 
       - aws-s3/sync:
