--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,17 +14,11 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - run:
-        name: Setting env
-        command: |
-          export aws_secret="nq4WLU0AyiXpNPwELAV6ZEazbdx25QuAg6nUw8yZ"
-          export aws_access="AKIAV6BPTWTLQQDLRJBV"
-          export region="ap-south-1"
 
       - aws-cli/setup:
-        aws_access_key_id: aws_access
-        aws_secret_access_key: aws_secret
-        region: region
+        aws_access_key_id: "AKIAV6BPTWTLQQDLRJBV"
+        aws_secret_access_key: "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"
+        region: "ap-south-1"
 
       - aws-s3/sync:
         from: "./"
@@ -32,12 +26,6 @@ jobs:
         arguments: "--delete"
 workflows:
   version: 2
-  # Infra-Setup-1:
-  #   jobs:
-  #     - job1
-  #     - job2:
-  #         requires:
-  #           - job1
   S3-sync-test:
     jobs:
       - job3
