--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,14 +16,14 @@ jobs:
       - checkout
 
       - aws-cli/setup:
-        aws_access_key_id: "AKIAV6BPTWTLQQDLRJBV"
-        aws_secret_access_key: "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"
-        region: "ap-south-1"
+          aws-access-key-id: "AKIAV6BPTWTLQQDLRJBV"
+          aws-secret-access-key: "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"
+          region: "ap-south-1"
 
       - aws-s3/sync:
-        from: "./"
-        to: "s3://circle-test-bucket-1/"
-        arguments: "--delete"
+          from: "./"
+          to: "s3://circle-test-bucket-1/"
+          arguments: "--delete"
 workflows:
   version: 2
   S3-sync-test:
