--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ jobs:
       - checkout
 
       - aws-cli/setup:
-          aws-access-key-id: aws_access_key
-          aws-secret-access-key: aws_secret_key
+          aws_access_key_id: aws_access_key
+          aws_secret_access_key: aws_secret_key
           region: region
       - run:
           name: Deleting README.md, .git and .circleci
