--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - aws-s3/sync:
           from: "./"
           to: "s3://circle-test-bucket-1/"
-          # arguments: "--delete"
+          arguments: "--delete"
 workflows:
   version: 2
   S3-sync-test:
